--- a/bao-ve-kho-hang.html
+++ b/bao-ve-kho-hang.html
@@ -34,7 +34,7 @@
             <div class="logo-wrapper navbar-brand valign">
                 <a href="index.html">
                     <div class="logo">
-                        <img src="img/logo.png" class="logo-img" alt="">
+                        <img src="images/logo.png" class="logo-img" alt="">
                     </div>
                 </a>
             </div>
