update bao ve chung cu biet thu

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
               <li class="dropdown-item">
                 <a href="bao-ve-ngan-hang.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ ngân hàng</a>
               </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-nha-rieng-biet-thu.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ nhà riêng, biệt thự</a>
+              </li>
             </ul>
           </li>
           <li class="nav-item">
@@ -96,7 +99,7 @@
   <header class="header slider-fade">
     <div class="owl-carousel owl-theme">
       <!-- The opacity on the image is made with "data-overlay-dark="number". You can change it using the numbers 0-9. -->
-      <div class="text-center item bg-img" data-overlay-dark="2" data-background="img/slider/2.jpg">
+      <div class="text-center item bg-img" data-overlay-dark="2" data-background="images/banner/banner.jpg">
         <div class="v-middle caption">
           <div class="container">
             <div class="row">
