update code dich vu le hoi, cong trinh

--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
               <li class="dropdown-item">
                 <a href="bao-ve-nha-rieng-biet-thu.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ nhà riêng, biệt thự</a>
               </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-cong-trinh-xay-dung.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ công trình xây dựng</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-su-kien-le-hoi.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ sự kiện lễ hội</a>
+              </li>
             </ul>
           </li>
           <li class="nav-item">
