--- a/gioi-thieu.html
+++ b/gioi-thieu.html
@@ -106,8 +106,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 caption mt-90">
-                    <h5>Luxury Hotel</h5>
-                    <h1>About Us</h1>
+                    <h5>Giới thiệu</h5>
+                    <h1>CÔNG TY BẢO VỆ TRUNG NAM</h1>
                 </div>
             </div>
         </div>
