--- a/index.html
+++ b/index.html
@@ -88,10 +88,22 @@
               <li class="dropdown-item">
                 <a href="bao-ve-toa-nha-chung-cu.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ tòa nhà, chung cư</a>
               </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-quan-cafe.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ quán cafe</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-khu-cong-nghiep.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ khu công nghiệp</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-van-phong-cong-ty.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ văn phòng công ty</a>
+              </li>
+              <li class="dropdown-item">
+                <a href="bao-ve-giu-xe.html" style="overflow-wrap: break-word;">Dịch vụ bảo vệ giữ xe</a>
+              </li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="restaurant.html">Bảng giá thuê dịch vụ bảo vệ</a>
+            <a class="nav-link" href="gia-thue-bao-ve.html">Bảng giá thuê dịch vụ bảo vệ</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="spa-wellness.html">HS Năng lực</a>
