--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </li>
 
           <li class="nav-item dropdown">
-            <span class="nav-link"><a href="news.html">Tin tức</a></span>
+            <span class="nav-link"><a href="tin-tuc.html">Tin tức</a></span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Liên hệ</a>
