--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -150,7 +150,7 @@
                 <div class="col-md-4">
                     <div class="square-flip">
                         <div class="square bg-img" data-background="img/rooms/2.jpg">
-                            <span class="category"><a href="mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></span>
+                            <span class="category"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
                                     <h4>Bản mô tả công việc của bảo vệ công ty chi tiết nhất
@@ -165,7 +165,7 @@
                                     rõ ràng. Bản liệt kê chi tiết các công việc cụ thể, rõ ràng được gọi là bản mô tả
                                     công việc. Đối với lĩnh vực bảo vệ, công việc tưởng chừng như đơn giản nhưng […]</p>
 
-                                <div class="btn-line"><a href="mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></div>
+                                <div class="btn-line"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></div>
                             </div>
                         </div>
                     </div>
@@ -173,7 +173,8 @@
                 <div class="col-md-4">
                     <div class="square-flip">
                         <div class="square bg-img" data-background="img/rooms/3.jpg">
-                            <span class="category"><a href="bao-gia-thue-dich-vu.html">Chi tiết</a></span>
+                            <span class="category"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
+                                    tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
                                     <h4>Cập nhật báo giá dịch vụ bảo vệ Bình Bương</h4>
@@ -187,7 +188,8 @@
                                     bảo vệ tại Bình Dương hiện nay là bao nhiêu ? khi cần thuê bảo vệ tại bình dương quý
                                     vị cần lưu ý điều gì ? Giá thuê dịch vụ bảo vệ tại […]</p>
 
-                                <div class="btn-line"><a href="bao-gia-thue-dich-vu.html">Chi tiết</a></div>
+                                <div class="btn-line"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
+                                        tiết</a></div>
                             </div>
                         </div>
                     </div>
@@ -253,9 +255,10 @@
                         </div>
                         <div class="square2">
                             <div class="square-container2">
-                                <p>Hiện nay, bảo vệ nhà hàng đang là một công việc có nhu cầu tuyển dụng rất cao. Bởi
-                                    hiện nay, các nhà hàng mọc lên như nấm nhằm phục vụ đời sống ngày càng cao của con
-                                    người. Vậy bạn có biết quy trình làm việc của nhân viên bảo vệ nhà hàng bao […]</p>
+                                <p>Ngày nay, vấn đề đảm bảo an ninh trật tự cho các toà nhà được rất nhiều các doanh
+                                    nghiệp đặc biệt quan tâm. Việc đảm bảo an ninh trật tự cho các khu vực trong tòa nhà
+                                    sẽ giúp mọi người cảm thấy an tâm hơn. Trong giới hạn bài viết này, chúng tôi […]
+                                </p>
 
                                 <div class="btn-line"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi tiết</a></div>
                             </div>
