--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <span class="nav-link"><a href="tin-tuc.html">Tin tức</a></span>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Liên hệ</a>
+            <a class="nav-link" href="lien-he.html">Liên hệ</a>
           </li>
         </ul>
       </div>
