--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/1.jpg" alt="" />
             </div>
-            <span class="category"><a href="rooms2.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
 
-              <h5><a href="room-details.html">Kho hàng, nhà xưởng</a></h5>
+              <h5><a href="bao-ve-kho-hang.html">Kho hàng, nhà xưởng</a></h5>
               <div class="line"></div>
               <div class="row facilities">
                 <div class="col col-md-7">
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col col-md-5 text-end">
                   <div class="permalink">
-                    <a href="room-details.html">Chi tiết <i class="ti-arrow-right"></i></a>
+                    <a href="bao-ve-kho-hang.html">Chi tiết <i class="ti-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -281,9 +281,9 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/2.jpg" alt="" />
             </div>
-            <span class="category"><a href="rooms2.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
-              <h5><a href="room-details.html">Bảo vệ ngày tết</a></h5>
+              <h5><a href="bao-ve-ngay-tet.html">Bảo vệ ngày tết</a></h5>
               <div class="line"></div>
               <div class="row facilities">
                 <div class="col col-md-7">
@@ -291,7 +291,7 @@
                 </div>
                 <div class="col col-md-5 text-end">
                   <div class="permalink">
-                    <a href="room-details.html">Chi tiết <i class="ti-arrow-right"></i></a>
+                    <a href="bao-ve-ngay-tet.html">Chi tiết <i class="ti-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -303,10 +303,10 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/3.jpg" alt="" />
             </div>
-            <span class="category"><a href="rooms2.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="chi-tiet.html">Bảng giá thuê</a></span>
             <div class="con">
 
-              <h5><a href="room-details.html">Công trình xây dựng</a></h5>
+              <h5><a href="bao-ve-cong-trinh-xay-dung.html">Công trình xây dựng</a></h5>
               <div class="line"></div>
               <div class="row facilities">
                 <div class="col col-md-7">
@@ -314,7 +314,7 @@
                 </div>
                 <div class="col col-md-5 text-end">
                   <div class="permalink">
-                    <a href="room-details.html">Chi tiết <i class="ti-arrow-right"></i></a>
+                    <a href="bao-ve-cong-trinh-xay-dung.html">Chi tiết <i class="ti-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -326,23 +326,17 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/4.jpg" alt="" />
             </div>
-            <span class="category"><a href="rooms2.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="chi-tiet.html">Bảng giá thuê</a></span>
             <div class="con">
-              <h6><a href="room-details.html">300$ / Night</a></h6>
-              <h5><a href="room-details.html">Bảo vệ Nhà máy xí nghiệp</a></h5>
+              <h5><a href="bao-ve-nha-may-xi-nghiep.html">Bảo vệ Nhà máy xí nghiệp</a></h5>
               <div class="line"></div>
               <div class="row facilities">
                 <div class="col col-md-7">
-                  <ul>
-                    <li><i class="flaticon-bed"></i></li>
-                    <li><i class="flaticon-bath"></i></li>
-                    <li><i class="flaticon-breakfast"></i></li>
-                    <li><i class="flaticon-towel"></i></li>
-                  </ul>
+
                 </div>
                 <div class="col col-md-5 text-end">
                   <div class="permalink">
-                    <a href="room-details.html">Chi tiết <i class="ti-arrow-right"></i></a>
+                    <a href="bao-ve-nha-may-xi-nghiep.html">Chi tiết <i class="ti-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -354,23 +348,17 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/7.jpg" alt="" />
             </div>
-            <span class="category"><a href="rooms2.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="chi-tiet.html">Bảng giá thuê</a></span>
             <div class="con">
-              <h6><a href="room-details.html">150$ / Night</a></h6>
-              <h5><a href="room-details.html">Bảo vệ văn phòng, công ty</a></h5>
+              <h5><a href="bao-ve-van-phong-cong-ty.html">Bảo vệ văn phòng, công ty</a></h5>
               <div class="line"></div>
               <div class="row facilities">
                 <div class="col col-md-7">
-                  <ul>
-                    <li><i class="flaticon-bed"></i></li>
-                    <li><i class="flaticon-bath"></i></li>
-                    <li><i class="flaticon-breakfast"></i></li>
-                    <li><i class="flaticon-towel"></i></li>
-                  </ul>
+
                 </div>
                 <div class="col col-md-5 text-end">
                   <div class="permalink">
-                    <a href="room-details.html">Chi tiết <i class="ti-arrow-right"></i></a>
+                    <a href="bao-ve-van-phong-cong-ty.html">Chi tiết <i class="ti-arrow-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -403,7 +391,7 @@
             <div class="pricing-card">
               <img src="img/pricing/1.jpg" alt="" />
               <div class="desc">
-                <div class="name" style="line-height: 26px;">ĐỘI NGŨ NHÂN VIÊN CHUYÊN NGHIỆP</div>
+                <div class="name" style="line-height: 26px;">NHÂN VIÊN CHUYÊN NGHIỆP</div>
                 <ul class="list-unstyled list">
                   <li> Nhân viên Bảo vệ Trung Nam được đào tạo bài bản, nhiệt tình thân
                     thiện, có tinh thần trách nhiệm cao trong công việc luôn ở trong trạng thái cảnh giác cao độ.
@@ -418,7 +406,7 @@
               <div class="desc">
                 <div class="name">BẢO MẬT – TRÁCH NHIỆM </div>
                 <ul class="list-unstyled list">
-                  <li> Đội ngũ nhân viên làm việc với tinh thần trách nhiệm cao 24/7, bảo mật mọi thông tin của khách hàng.</li>
+                  <li> Đội ngũ nhân viên làm việc với tinh thần trách nhiệm cao 24/7, bảo mật mọi thông tin của khách hàng, luôn trong trạng thái có thể đối phó với bất kỳ trường hợp nào xãy ra.</li>
                   
                 </ul>
               </div>
@@ -436,9 +424,9 @@
             <div class="pricing-card">
               <img src="img/pricing/4.jpg" alt="" />
               <div class="desc">
-                <div class="name">PHÍ DỊCH VỤ CẠNH TRANH</div>    
+                <div class="name">PHÍ CẠNH TRANH</div>    
                 <ul class="list-unstyled list">
-                  <li>Giá thuê bảo vệ chuyên nghiệp hợp lý từ phổ thông đến cao cấp, tiết kiệm chi phí cho Quý khách hàng</li>
+                  <li>Giá thuê bảo vệ chuyên nghiệp hợp lý từ phổ thông đến cao cấp,nhiều sự lựa cho phù hợp và tiết kiệm chi phí cho Quý khách hàng</li>
 
                 </ul>
               </div>
@@ -480,18 +468,14 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="section-subtitle">TIN TỨC</div>
-          <div class="section-title" style="font-size: 25px;">Thông tin về bảo vệ <span style="font-weight: 700;color: black;">TRUNG NAM</span></div>
+          <div class="section-subtitle">HÌNH ẢNH</div>
+          <div class="section-title" style="font-size: 25px;">Hình ảnh về <span style="font-weight: 700;color: black;"> BẢO VỆ TRUNG NAM</span></div>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4">
           <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-            <span class="flaticon-world"></span>
-            <h5>Các tình huống an ninh trong khách sạn</h5>
-            <p>
-              Đối với mỗi chúng ta khi kinh doanh các hệ thống khách sạn hay nhà hàng...
-            </p>
+           <img src="https://picsum.photos/200" style="height: 400px;"/>
             <div class="facility-shape">
               <span class="flaticon-world"></span>
             </div>
@@ -499,11 +483,7 @@
         </div>
         <div class="col-md-4">
           <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-            <span class="flaticon-car"></span>
-            <h5>Tham khảo ngay quy trình làm việc của bảo vệ nhà hàng</h5>
-            <p>
-              Hiện nay, bảo vệ nhà hàng đang là một công việc có nhu cầu tuyển dụng rất cao.
-            </p>
+            <img src="https://picsum.photos/200" style="height: 400px;"/>
             <div class="facility-shape">
               <span class="flaticon-car"></span>
             </div>
@@ -511,11 +491,7 @@
         </div>
         <div class="col-md-4">
           <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-            <span class="flaticon-bed"></span>
-            <h5>Tham khảo nội quy bảo vệ tòa nhà bạn nên biết</h5>
-            <p>
-              Những nội quy khi bảo vệ tòa nhà: Để giúp cho việc đảm bảo tính an toàn và an ninh của tòa nhà...
-            </p>
+            <img src="https://picsum.photos/200" style="height: 400px;"/>
             <div class="facility-shape">
               <span class="flaticon-bed"></span>
             </div>
@@ -523,11 +499,7 @@
         </div>
         <div class="col-md-4">
           <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-            <span class="flaticon-swimming"></span>
-            <h5>Cập nhật báo giá dịch vụ bảo vệ bình dương</h5>
-            <p>
-              Thuê dịch vụ bảo vệ Bình Dương ở đâu có uy tín nhất hiện nay nên chọn ? 
-            </p>
+            <img src="https://picsum.photos/200" style="height: 400px;"/>
             <div class="facility-shape">
               <span class="flaticon-swimming"></span>
             </div>
@@ -535,11 +507,7 @@
         </div>
         <div class="col-md-4">
           <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-            <span class="flaticon-wifi"></span>
-            <h5>Bản mô tả công việc bảo vệ khách sạn chi tiết nhất</h5>
-            <p>
-              Bản mô tả công việc bảo vệ khách sạn chính là bản diễn giải một cách chi tiết, dễ hiểu về các công việc...
-            </p>
+            <img src="https://picsum.photos/200" style="height: 400px;"/>
             <div class="facility-shape">
               <span class="flaticon-wifi"></span>
             </div>
@@ -547,12 +515,7 @@
         </div>
         <div class="col-md-4">
           <div class="single-facility animate-box" data-animate-effect="fadeInUp">
-            <span class="flaticon-breakfast"></span>
-            <h5>Các bước trong quy trình xử lý sự cố tòa nhà chi tiết nhất
-            </h5>
-            <p>
-              Ngày nay, vấn đề đảm bảo an ninh trật tự cho các toà nhà được rất nhiều các doanh nghiệp...
-            </p>
+            <img src="https://picsum.photos/200" style="height: 400px;"/>
             <div class="facility-shape">
               <span class="flaticon-breakfast"></span>
             </div>
