--- a/tin-tuc.html
+++ b/tin-tuc.html
@@ -224,7 +224,7 @@
                 <div class="col-md-4">
                     <div class="square-flip">
                         <div class="square bg-img" data-background="img/rooms/8.jpg">
-                            <span class="category"><a href="noi-quy-nha-xe-truong-hoc.html">Book</a></span>
+                            <span class="category"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a></span>
                             <div class="square-container d-flex align-items-end justify-content-end">
                                 <div class="box-title">
                                     <h4>Mẫu nội quy nhà xe trường học đầy đủ nhất</h4>
