--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     sẽ giúp mọi người cảm thấy an tâm hơn. Trong giới hạn bài viết này, chúng tôi […]
                   </p>
 
-                  <div class="btn-line"><a href="noi-quy-bao-ve-toa-nha.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="noi-quy-bao-ve-toa-nha.html">Chi tiết</a></div>
                 </div>
               </div>
             </div>
@@ -528,7 +528,7 @@
                     rõ ràng. Bản liệt kê chi tiết các công việc cụ thể, rõ ràng được gọi là bản mô tả
                     công việc. Đối với lĩnh vực bảo vệ, công việc tưởng chừng như đơn giản nhưng […]</p>
 
-                  <div class="btn-line"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></div>
                 </div>
               </div>
             </div>
@@ -551,7 +551,7 @@
                     bảo vệ tại Bình Dương hiện nay là bao nhiêu ? khi cần thuê bảo vệ tại bình dương quý
                     vị cần lưu ý điều gì ? Giá thuê dịch vụ bảo vệ tại […]</p>
 
-                  <div class="btn-line"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
+                  <div class="btn-line" style="font-weight: 800;"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
                       tiết</a></div>
                 </div>
               </div>
@@ -578,7 +578,7 @@
 
                   </p>
 
-                  <div class="btn-line"><a href="dau-hieu-nhan-biet-cong-ty-bao-ve-lua-dao.html">Chi
+                  <div class="btn-line" style="font-weight: 800;"><a href="dau-hieu-nhan-biet-cong-ty-bao-ve-lua-dao.html">Chi
                       tiết</a></div>
                 </div>
               </div>
@@ -600,7 +600,7 @@
                   <p>Nội quy nhà xe trường học là bản nội quy – quy định của nhà trường về việc tuân thủ
                     nội quy gởi xe tại trường, yêu cầu học sinh, sinh viên và phụ huynh phải thực hiện
                     khi ra vào trường học nhằm đảm bảo sự an toàn và duy trì an ninh trật […]</p>
-                  <div class="btn-line"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a></div>
                 </div>
               </div>
             </div>
@@ -623,7 +623,7 @@
                     sẽ giúp mọi người cảm thấy an tâm hơn. Trong giới hạn bài viết này, chúng tôi […]
                   </p>
 
-                  <div class="btn-line"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi tiết</a></div>
                 </div>
               </div>
             </div>
