--- a/index3.html
+++ b/index3.html
@@ -244,7 +244,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -278,7 +278,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -312,7 +312,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -346,7 +346,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -380,7 +380,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -414,7 +414,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
