--- a/rooms3.html
+++ b/rooms3.html
@@ -147,7 +147,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -183,7 +183,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -255,7 +255,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -291,7 +291,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
@@ -327,7 +327,7 @@
                                         </ul>
                                     </div>
                                 </div>
-                                <div class="btn-line"><a href="room-details.html">Details</a></div>
+                                <div class="btn-line" style="font-weight: 800;"><a href="room-details.html">Details</a></div>
                             </div>
                         </div>
                     </div>
