--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/3.jpg" alt="" />
             </div>
-            <span class="category"><a href="chi-tiet.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
 
               <h5><a href="bao-ve-cong-trinh-xay-dung.html">Công trình xây dựng</a></h5>
@@ -333,9 +333,9 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/4.jpg" alt="" />
             </div>
-            <span class="category"><a href="chi-tiet.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
-              <h5><a href="bao-ve-nha-may-xi-nghiep.html">Bảo vệ Nhà máy xí nghiệp</a></h5>
+              <h5><a href="bao-ve-nha-may-xi-nghiep.html">Bảo vệ nhà máy xí nghiệp</a></h5>
               <div class="line"></div>
               <div class="row facilities">
                 <div class="col col-md-7">
@@ -355,7 +355,7 @@
             <div class="position-re o-hidden">
               <img src="img/rooms/7.jpg" alt="" />
             </div>
-            <span class="category"><a href="chi-tiet.html">Bảng giá thuê</a></span>
+            <span class="category"><a href="lien-he.html">Bảng giá thuê</a></span>
             <div class="con">
               <h5><a href="bao-ve-van-phong-cong-ty.html">Bảo vệ văn phòng, công ty</a></h5>
               <div class="line"></div>
