--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
     </div>
   </section>
   <!-- Facilties -->
-  <div class="rooms3 section-padding" >
+  <div class="rooms3 section-padding">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
@@ -505,7 +505,8 @@
                     sẽ giúp mọi người cảm thấy an tâm hơn. Trong giới hạn bài viết này, chúng tôi […]
                   </p>
 
-                  <div class="btn-line" style="font-weight: 800;"><a href="noi-quy-bao-ve-toa-nha.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="noi-quy-bao-ve-toa-nha.html">Chi tiết</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -528,7 +529,8 @@
                     rõ ràng. Bản liệt kê chi tiết các công việc cụ thể, rõ ràng được gọi là bản mô tả
                     công việc. Đối với lĩnh vực bảo vệ, công việc tưởng chừng như đơn giản nhưng […]</p>
 
-                  <div class="btn-line" style="font-weight: 800;"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="ban-mo-ta-chi-tiet-cong-viec.html">Chi
+                      tiết</a></div>
                 </div>
               </div>
             </div>
@@ -551,7 +553,8 @@
                     bảo vệ tại Bình Dương hiện nay là bao nhiêu ? khi cần thuê bảo vệ tại bình dương quý
                     vị cần lưu ý điều gì ? Giá thuê dịch vụ bảo vệ tại […]</p>
 
-                  <div class="btn-line" style="font-weight: 800;"><a href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
+                  <div class="btn-line" style="font-weight: 800;"><a
+                      href="bao-gia-thue-dich-vu-bao-ve-tai-binh-duong.html">Chi
                       tiết</a></div>
                 </div>
               </div>
@@ -578,7 +581,8 @@
 
                   </p>
 
-                  <div class="btn-line" style="font-weight: 800;"><a href="dau-hieu-nhan-biet-cong-ty-bao-ve-lua-dao.html">Chi
+                  <div class="btn-line" style="font-weight: 800;"><a
+                      href="dau-hieu-nhan-biet-cong-ty-bao-ve-lua-dao.html">Chi
                       tiết</a></div>
                 </div>
               </div>
@@ -600,7 +604,8 @@
                   <p>Nội quy nhà xe trường học là bản nội quy – quy định của nhà trường về việc tuân thủ
                     nội quy gởi xe tại trường, yêu cầu học sinh, sinh viên và phụ huynh phải thực hiện
                     khi ra vào trường học nhằm đảm bảo sự an toàn và duy trì an ninh trật […]</p>
-                  <div class="btn-line" style="font-weight: 800;"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="noi-quy-nha-xe-truong-hoc.html">Chi tiết</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -623,7 +628,8 @@
                     sẽ giúp mọi người cảm thấy an tâm hơn. Trong giới hạn bài viết này, chúng tôi […]
                   </p>
 
-                  <div class="btn-line" style="font-weight: 800;"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi tiết</a></div>
+                  <div class="btn-line" style="font-weight: 800;"><a href="quy-trinh-xu-ly-su-co-toa-nha.html">Chi
+                      tiết</a></div>
                 </div>
               </div>
             </div>
@@ -649,63 +655,59 @@
                 <div class="item">
                   <span class="quote"><img src="img/quot.png" alt="" /></span>
                   <p>
-                    Hotel dapibus asue metus the nec feusiate eraten miss
-                    hendreri net ve ante the lemon sanleo nectan feugiat erat
-                    hendrerit necuis ve ante otel inilla duiman at finibus
-                    viverra neca the sene on satien the miss drana inc fermen
-                    norttito sit space, mus nellentesque habitan.
+                    Chúng
+                    tôi rất hài lòng về
+                    dịch vụ của bảo vệ
+                    Trung Nam, các
+                    anh em đều thể hiện
+                    được tác phong
+                    chuyên nghiệp, được
+                    đào tạo qua trường
+                    lớp bài bản, giữ an
+                    ninh và an toàn,
+                    giúp chúng tôi an
+                    tâm làm việc.
                   </p>
                   <div class="info">
-                    <div class="author-img">
+                    <!-- <div class="author-img">
                       <img src="img/team/4.jpg" alt="" />
-                    </div>
+                    </div> -->
                     <div class="cont">
                       <span><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i
                           class="star-rating"></i><i class="star-rating"></i></span>
-                      <h6>Emily Brown</h6>
-                      <span>Guest review</span>
+                      <h6>Nguyễn
+                        Văn Giàu</h6>
+                      <p>Lãnh
+                        đạo công ty dược phẩm
+                        Imexpharm</p>
                     </div>
                   </div>
                 </div>
                 <div class="item">
                   <span class="quote"><img src="img/quot.png" alt="" /></span>
                   <p>
-                    Hotel dapibus asue metus the nec feusiate eraten miss
-                    hendreri net ve ante the lemon sanleo nectan feugiat erat
-                    hendrerit necuis ve ante otel inilla duiman at finibus
-                    viverra neca the sene on satien the miss drana inc fermen
-                    norttito sit space, mus nellentesque habitan.
+                    Khen
+                    thưởng 2 nhân viên
+                    bảo vệ Nguyễn Văn
+                    Thiết và Nguyễn Minh
+                    Hùng trong lúc làm
+                    nhiệm vụ đã khống
+                    chế thành công đối
+                    tượng đột nhập trái
+                    phép, ngăn chặn được
+                    những hậu quả khôn
+                    lường cho công ty.
+
                   </p>
                   <div class="info">
-                    <div class="author-img">
-                      <img src="img/team/1.jpg" alt="" />
-                    </div>
                     <div class="cont">
                       <span><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i
                           class="star-rating"></i><i class="star-rating"></i></span>
-                      <h6>Nolan White</h6>
-                      <span>Guest review</span>
-                    </div>
-                  </div>
-                </div>
-                <div class="item">
-                  <span class="quote"><img src="img/quot.png" alt="" /></span>
-                  <p>
-                    Hotel dapibus asue metus the nec feusiate eraten miss
-                    hendreri net ve ante the lemon sanleo nectan feugiat erat
-                    hendrerit necuis ve ante otel inilla duiman at finibus
-                    viverra neca the sene on satien the miss drana inc fermen
-                    norttito sit space, mus nellentesque habitan.
-                  </p>
-                  <div class="info">
-                    <div class="author-img">
-                      <img src="img/team/5.jpg" alt="" />
-                    </div>
-                    <div class="cont">
-                      <span><i class="star-rating"></i><i class="star-rating"></i><i class="star-rating"></i><i
-                          class="star-rating"></i><i class="star-rating"></i></span>
-                      <h6>Olivia Martin</h6>
-                      <span>Guest review</span>
+                      <h6>Nguyễn
+                        Bạch Dương</h6>
+                      <p>Lãnh
+                        đạo công ty dược phẩm
+                        Imexpharm</p>
                     </div>
                   </div>
                 </div>
@@ -722,24 +724,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="owl-carousel owl-theme">
+          <div class="owl-carousel owl-theme" style="display: flex;justify-content: center;">
             <div class="clients-logo">
-              <a href="#0"><img src="img/clients/1.png" alt="" /></a>
+              <a href="#0"><img src="./images/khach-hang/Nestle-Logo-150x150-1.png.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="img/clients/2.png" alt="" /></a>
+              <a href="#0"><img src="./images/khach-hang/toa-150x150-1.jpg.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="img/clients/3.png" alt="" /></a>
+              <a href="#0"><img src="./images/khach-hang/toyota-150x150-1.png.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="img/clients/4.png" alt="" /></a>
+              <a href="#0"><img src="./images/khach-hang/Untitled-2-1-150x150-1.png.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="img/clients/5.png" alt="" /></a>
+              <a href="#0"><img src="./images/khach-hang/vnvc-150x150-1.webp" alt="" /></a>
             </div>
             <div class="clients-logo">
-              <a href="#0"><img src="img/clients/6.png" alt="" /></a>
+              <a href="#0"><img src="./images/khach-hang/WIPRO-150x150-1.png.webp" alt="" /></a>
             </div>
           </div>
         </div>
