--- a/lien-he.html
+++ b/lien-he.html
@@ -166,9 +166,9 @@
                 </div>
             </div>
             <!-- Map Section -->
-            <div class="row">
+            <div class="row" style="height: 600px;">
                 <div class="col-md-12 map animate-box" data-animate-effect="fadeInUp">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1573147.7480448114!2d-74.84628175962355!3d41.04009641088412!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25856139b3d33%3A0xb2739f33610a08ee!2s1616%20Broadway%2C%20New%20York%2C%20NY%2010019%2C%20Amerika%20Birle%C5%9Fik%20Devletleri!5e0!3m2!1str!2str!4v1646760525018!5m2!1str!2str" width="100%" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.848235242434!2d106.58472739999996!3d10.822923900000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752b6c4e0cecff%3A0x1e2ff5c8b12077a2!2zQ8O0bmcgdHkgYuG6o28gduG7hyBIb8OgbmcgTG9uZw!5e0!3m2!1svi!2s!4v1705993315299!5m2!1svi!2s" style="border:0; width: 100%;height: 100%;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
