--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-  <title>The Cappa Luxury Hotel</title>
-  <link rel="shortcut icon" href="img/favicon.png" />
+  <title>Bảo Vệ Trung Nam</title>
+  <link rel="shortcut icon" href="images/logo-icon.png" />
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Barlow&family=Barlow+Condensed&family=Gilda+Display&display=swap" />
   <link rel="stylesheet" href="css/plugins.css" />
@@ -755,12 +755,12 @@
         <div class="row">
           <div class="col-md-4">
             <div class="footer-column footer-about">
-              <h3 class="footer-title">BẢO VỆ TRUNG NAM</h3>
+              <h3 class="footer-title" style="font-weight: 800;">BẢO VỆ TRUNG NAM</h3>
               <p class="footer-about-text">
-                Welcome to the best five-star deluxe hotel in New York. Hotel
-                elementum sesue the aucan vestibulum aliquam justo in sapien
-                rutrum volutpat.
+                Chào mừng khách hàng đến với bảo vệ Trung Nam - Trung Nam cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện
+                nay. Với phương châm hoạt động
               </p>
+              <p style="font-size: 18px; color: white;">“An Toàn – Uy Tín – Chất Lượng – Hiệu Quả”.</p>
 
 
             </div>
@@ -769,12 +769,12 @@
             <div class="footer-column footer-explore clearfix">
               <h3 class="footer-title">DỊCH VỤ</h3>
               <ul class="footer-explore-list list-unstyled">
-                <li><a href="index.html">Bảo vệ nhà máy xí nghiệp</a></li>
-                <li><a href="rooms.html">Bảo vệ kho hàng</a></li>
-                <li><a href="restaurant.html">Bảo vệ phòng khám bệnh viện</a></li>
-                <li><a href="spa-wellness.html">Bảo vệ shop thời trang</a></li>
-                <li><a href="about.html">Bảo vệ trung cư</a></li>
-                <li><a href="contact.html">Bảo vệ trường học</a></li>
+                <li><a href="bao-ve-nha-may-xi-nghiep.html">Bảo vệ nhà máy xí nghiệp</a></li>
+                <li><a href="bao-ve-kho-hang.html">Bảo vệ kho hàng</a></li>
+                <li><a href="bao-ve-phong-kham-benh-vien.html">Bảo vệ phòng khám bệnh viện</a></li>
+                <li><a href="bao-ve-shop-thoi-trang.html">Bảo vệ shop thời trang</a></li>
+                <li><a href="bao-ve-toa-nha-chung-cu.html">Bảo vệ trung cư</a></li>
+                <li><a href="bao-ve-ngan-hang.html">Bảo vệ ngân hàng</a></li>
               </ul>
             </div>
           </div>
@@ -810,6 +810,27 @@
       </div>
     </div>
   </footer>
+
+  <div onclick="window.location.href= 'tel:0934193113'" class="hotline-phone-ring-wrap">
+    <div class="hotline-phone-ring">
+      <div class="hotline-phone-ring-circle"></div>
+      <div class="hotline-phone-ring-circle-fill"></div>
+      <div class="hotline-phone-ring-img-circle">
+        <a href="tel:0934193113" class="pps-btn-img">
+          <img src="./images/phone.png" alt="Gọi điện thoại" width="50">
+        </a>
+      </div>
+    </div>
+    <a href="tel:0934193113">
+    </a>
+    <div class="hotline-bar"><a href="tel:0934193113">
+      </a><a href="tel:0934193113">
+        <span class="text-hotline">0934 193 113</span>
+      </a>
+    </div>
+
+  </div>
+
   <!-- jQuery -->
   <script src="js/jquery-3.6.3.min.js"></script>
   <script src="js/jquery-migrate-3.0.0.min.js"></script>
