--- a/lien-he.html
+++ b/lien-he.html
@@ -166,11 +166,21 @@
                 </div>
             </div>
             <!-- Map Section -->
-            <div class="row" style="height: 600px;">
+            <div class="row map-logo" >
                 <div class="col-md-12 map animate-box" data-animate-effect="fadeInUp">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.848235242434!2d106.58472739999996!3d10.822923900000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752b6c4e0cecff%3A0x1e2ff5c8b12077a2!2zQ8O0bmcgdHkgYuG6o28gduG7hyBIb8OgbmcgTG9uZw!5e0!3m2!1svi!2s!4v1705993315299!5m2!1svi!2s" style="border:0; width: 100%;height: 100%;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
+            <style>
+                .map-logo{
+                    height: 600px;
+                }
+                @media screen and (max-width:400px) {
+                    .map-logo{
+                        height: 400px;
+                    }
+                }
+            </style>
         </div>
     </section>
 
