update ho so nang luc

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <a class="nav-link" href="gia-thue-bao-ve.html">Bảng giá thuê dịch vụ bảo vệ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="spa-wellness.html">HS Năng lực</a>
+            <a class="nav-link" href="./images/ho-so-nang-luc/ho-so-nang-luc- TRUNG NAM.pdf">HS Năng lực</a>
           </li>
 
           <li class="nav-item dropdown">
@@ -755,7 +755,7 @@
         <div class="row">
           <div class="col-md-4">
             <div class="footer-column footer-about">
-              <h3 class="footer-title" style="font-weight: 800;">BẢO VỆ TRUNG NAM</h3>
+              <h3 class="footer-title" style="font-weight: 800;line-height: 40px;">CÔNG TY CỔ PHẦN DỊCH VỤ BẢO VỆ CHUYÊN NGHIỆP TRUNG NAM</h3>
               <p class="footer-about-text">
                 Chào mừng khách hàng đến với bảo vệ Trung Nam - Trung Nam cung cấp cho khách hàng dịch vụ bảo vệ tốt nhất hiện
                 nay. Với phương châm hoạt động
@@ -782,13 +782,15 @@
             <div class="footer-column footer-contact">
               <h3 class="footer-title">LIÊN HỆ</h3>
               <p class="footer-contact-text">
-                1616 Broadway NY, New York 10001<br />United States of America
+                Tầng 08, Tòa nhà Pearl Plaza, 561A Điện Biên Phủ, Phường 25,
+                Quận Bình Thạnh, TP.HCM, Việt Nam.
               </p>
               <div class="footer-contact-info">
                 <p class="footer-contact-phone">
-                  <span class="flaticon-call"></span> 0934 193 113
+                  <span class="flaticon-call"></span> <a href="tel:+84934193113">0934 193 113</a>
                 </p>
-                <p class="footer-contact-mail">info@luxuryhotel.com</p>
+                <p class="footer-contact-mail">Email: <a href="mailto:baovetrungnam.vn@gmail.com">baovetrungnam.vn@gmail.com</a></p>
+                <p class="footer-contact-mail">Website: <a href="./index.html">www.baovetrungnam.vn</a></p>
               </div>
 
             </div>
